# adb-manager_rs

./: .gitignore  Cargo.toml
adb-manager-client-example/: Cargo.toml
adb-manager-client-example/src/: cli.rs  client.rs  main.rs
aidl-rust-codegen/: Cargo.toml
aidl-rust-codegen/src/: Android.bp  lib.rs
aidl-rust-codegen/src/aidl/: Android.bp
aidl-rust-codegen/src/binder_impl/: AdbTransportType.rs  FingerprintAndPairDevice.rs  IAdbCallback.rs  IAdbManager.rs  IAdbTransport.rs  PairDevice.rs  mod.rs
aidl-rust-codegen/src/service_stub/: my_stub_iadbcallback.rs
